# ComfyUI-SegviGen

./: .gitignore  README.md  __init__.py  app.py  headless_split.py  inference_full.py  install.py  model_manager.py  nodes.py  pipeline_inference.py  prestartup_script.py  pyproject.toml  requirements.txt  split.py  test_trimesh.py  utils_3d.py
.github/workflows/: publish.yml
data_toolkit/: bpy_render.py  texturing_pipeline.json
examples/: Trellis2MV_00001_.glb
scripts/: convert_to_safetensors.py
trellis2/models/: __init__.py  sparse_structure_flow.py  sparse_structure_vae.py  structured_latent_flow.py
trellis2/models/sc_vaes/: fdg_vae.py  sparse_unet_vae.py
trellis2/modules/: image_feature_extractor.py
trellis2/modules/attention/: config.py  full_attn.py
trellis2/modules/sparse/: config.py
trellis2/modules/sparse/attention/: full_attn.py
trellis2/pipelines/rembg/: BiRefNet.py
workflows/: SegvGen_PixelArtistry_test.json  SegvigenNew.json  SegvigenNewupdated.json  Segvigen_Segmentation.json  inference.json
